Add: Se crean filtros por categorías y algunas mejoras de look and feel

--- a/src/app/pages/categories/categories.page.html
+++ b/src/app/pages/categories/categories.page.html
@@ -35,7 +35,7 @@
       <ion-list>        
         <ion-item *ngFor="let c of categories">
           <ion-label>{{ c.name }}</ion-label>
-          <ion-button fill="clear" color="danger" (click)="cat.delete(c.id); loadCategories();">
+          <ion-button fill="clear" color="danger" (click)="confirmDelete(c.id, $event)">
             <ion-icon name="trash" slot="icon-only" size="large"></ion-icon>
           </ion-button>
         </ion-item>
