--- a/src/app/components/task-form/task-form.component.html
+++ b/src/app/components/task-form/task-form.component.html
@@ -1,11 +1,18 @@
-<ion-item>
-  <ion-input [(ngModel)]="title" placeholder="Dercriba la tarea..."></ion-input>
-  <ion-select [(ngModel)]="categoryId" placeholder="Categoría">
-    <ion-select-option *ngFor="let c of categories" [value]="c.id">
-      {{ c.name }}
-    </ion-select-option>
-  </ion-select>
-  <ion-button slot="end" (click)="submit()">
-    <ion-icon name="add-circle" size="large" slot="icon-only"></ion-icon>
-  </ion-button>
-</ion-item>
+<ion-list>
+  <ion-item>
+    <ion-label position="floating">Descripción</ion-label>
+    <ion-input [(ngModel)]="title"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>Categoría</ion-label>
+    <ion-select [(ngModel)]="categoryId" placeholder="Seleccionar">
+      <ion-select-option *ngFor="let c of categories" [value]="c.id">
+        {{ c.name }}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+</ion-list>
+<ion-button expand="block" (click)="submit()" class="ion-margin-top">
+  <ion-icon name="add-circle" slot="start"></ion-icon>
+  Agregar Tarea
+</ion-button>
